Factory terminado. falta implementar TramoDAOArchivo que lo implementare despues.